* Updated to ADC 0.9
* Fixed a crash bug (thanks trem)
* Fixed a geoip init bug (thanks trem)
* Fixed a prio setting bug (thanks tpo)
* Fixed some font settings (thanks tpo)
* Fixed ADC password sending
* Magnet registration fix (thanks ullner)
* Finished partial file lists for ADC
* Fixed some ADC crashes
* Basic ADC searches now work
* Basic ADC pms now work
* Basic ADC transfers now work

-- 0.670 2005-02-04 --
* Fixed an issue with international formats of float numbers (also fixes UDP port setting)
* Fixed a minor crash log output address issue
* Split off color and sound to a new page (thanks ullner)
* [bug 359] Fixed an issue with negative search terms (thanks naga)
* Added option to filter TTH results in search spy (thanks joakim tosteberg)
* [bug 184] Updated log functionality to allow users to customize log filenames (thanks naga)
* Fixes to log edit function (thanks naga)
* Added possibility to filter all searches without tth (thanks naga)
* More preferences splitting (thanks ullner)
* Small socket fix (thanks tremor)
* Search tab goes bold if set to (thanks naga)
* Hopefully fixed an UPnP crash
* [bug 302] User commands in file lists (thanks joakim tosteberg)
* ADC url's clickable (thanks naga)
* Improved search timer to avoid spamming hub (thanks naga)
* Redid some of the hash storage code, should be slighly more efficient
* [bug 94] Share is cached for faster startup
* Temporary targetnames are now filled in when download starts, not when item is added to queue,
  which makes temp target dir changes happen for current queue items as well, plus we get a huge
  memory save on huge queues.
* [bug 363] Added "Remove All Sources" to queue (thanks izzzo & garg)
* Queue menu items greyed out when there are no items (thanks izzzo)
* Fixed a crash with certain empty lists (thanks garg)
* Added "restore all" to undo "minimize all" (thanks guitarm)
* Added optional pm history (thanks trem and ullner)
* Better log file managment (thanks trem)