@@ -504,7 +504,7 @@ BEGIN
     EDITTEXT        IDC_BUFFERSIZE,208,7,41,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_MAX_HASH_SPEED,69,24,45,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_MAX_TAB_ROWS,208,24,41,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SHOW_LAST_LINES_LOG,69,42,45,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SHOW_LAST_LINES_LOG,69,41,45,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_SEARCH_HISTORY,208,41,41,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_SEARCH_HISTORY_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
@@ -519,11 +519,13 @@ BEGIN
     LTEXT           "Max Hash Speed",IDC_SETTINGS_MAX_HASH_SPEED,7,27,57,8,0,
                     WS_EX_RIGHT
     LTEXT           "MiB/s",IDC_SETTINGS_MBS,117,27,20,8
-    LTEXT           "PM history",IDC_SETTINGS_PM_HISTORY,31,45,38,9
+    LTEXT           "PM history",IDC_SETTINGS_PM_HISTORY,31,44,38,9
     RTEXT           "Search history",IDC_SETTINGS_SEARCH_HISTORY,126,43,78,8
-    EDITTEXT        IDC_SET_MINISLOT_SIZE,69,62,46,15,ES_AUTOHSCROLL
-    LTEXT           "Mini slot size",IDC_SETTINGS_TEXT_MINISLOT,28,64,40,16
-    LTEXT           "KiB",IDC_SETTINGS_KB2,120,66,14,10
+    EDITTEXT        IDC_SET_MINISLOT_SIZE,69,59,46,15,ES_AUTOHSCROLL
+    LTEXT           "Mini slot size",IDC_SETTINGS_TEXT_MINISLOT,26,62,40,16
+    LTEXT           "KiB",IDC_SETTINGS_KB2,120,63,14,10
+    EDITTEXT        IDC_BIND_ADDRESS,208,59,41,14,ES_AUTOHSCROLL
+    RTEXT           "Bind address",IDC_SETTINGS_BIND_ADDRESS,138,62,65,8
 END
 
 IDD_NETWORKPAGE DIALOGEX 0, 0, 275, 225
