@@ -113,7 +113,7 @@ void SearchManager::setPort(short aPort) throw(SocketException) {
 		socket = new Socket();
 	}
 
-	socket->create(Socket::TYPE_UDP);
+	socket->create(Socket::TYPE_UDP, true);
 	socket->bind(aPort);
 	start();
 }
@@ -151,7 +151,7 @@ int SearchManager::run() {
 
 		try {
 			socket->disconnect();
-			socket->create(Socket::TYPE_UDP);
+			socket->create(Socket::TYPE_UDP, true);
 			socket->bind(port);
 		} catch(const SocketException& e) {
 			// Oops, fatal this time...
@@ -339,6 +339,6 @@ string SearchManager::clean(const string& aSearchString) {
 
 /**
  * @file
- * $Id: SearchManager.cpp,v 1.52 2005/03/14 10:37:23 arnetheduck Exp $
+ * $Id: SearchManager.cpp,v 1.53 2005/03/19 09:02:45 arnetheduck Exp $
  */
 
