@@ -354,6 +354,7 @@ string ResourceManager::strings[] = {
 "Automatically search for alternative download locations", 
 "Automatically match queue for auto search hits", 
 "Automatically refresh share list every hour", 
+"Bind address", 
 "&Change", 
 "Clear search box after each search", 
 "Colors", 
@@ -905,6 +906,7 @@ string ResourceManager::names[] = {
 "SettingsAutoSearch", 
 "SettingsAutoSearchAutoMatch", 
 "SettingsAutoUpdateList", 
+"SettingsBindAddress", 
 "SettingsChange", 
 "SettingsClearSearch", 
 "SettingsColors", 
