@@ -334,6 +334,8 @@
 #define IDC_SET_MINISLOT_SIZE           1283
 #define IDC_SETTINGS_TEXT_MINISLOT      1284
 #define IDC_SETTINGS_KB2                1285
+#define IDC_BIND_ADDRESS                1286
+#define IDC_SETTINGS_BIND_ADDRESS       1287
 #define IDC_BROWSELIST                  3000
 #define IDC_REMOVE_SOURCE               3500
 #define IDC_PM                          4000
@@ -373,7 +375,7 @@
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        242
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1286
+#define _APS_NEXT_CONTROL_VALUE         1288
 #define _APS_NEXT_SYMED_VALUE           105
 #endif
 #endif
